corrected z-index initial position for colgate exit

--- a/newYork.css
+++ b/newYork.css
@@ -54,12 +54,12 @@
 }
 .anchor{
   height: 191px;
-  width: 158px;
+  width: 125px;
   background-color: rgba(0,0,0,0);
   position: absolute;
   z-index: 0;
-  top: 35%;
-  left: 43%;
+  top: 40.5%;
+  left: 47%;
   border-top: 2px solid black;
   border-right: 8px solid grey;
 }
@@ -89,5 +89,5 @@ display: flex;
 justify-content: center;
 align-items: center;
 border: 2px solid white;
-border-top: none;
+
 }
