--- a/ohio.css
+++ b/ohio.css
@@ -4,7 +4,7 @@
   height: 50px;
   background-color: rgba(255,255,255,0);
   top: 28%;
-  left: 40%;
+  left: 43%;
   display: flex;
   justify-content: center;
   align-items: center;
